--- a/GoToImplementation/GoToImplementation.csproj
+++ b/GoToImplementation/GoToImplementation.csproj
@@ -55,6 +55,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="GoToImplementationCommand.cs" />
+    <Compile Include="NavigationState.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VisualStudioServices.cs" />
     <Compile Include="VisualStudioServices.Extensions.cs" />
